--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') %>
 
-<body class="bg-cover bg-fixed bg-center" style="background-image: url('/img/grow-hall.png');">
+<body class="bg-cover bg-fixed bg-center" style="background-image: url('/img/katarifarms.png');">
     <header class="fixed-top bg-custom text-custom shadow-lg">
         <div class="container d-flex align-items-center p-3">
             <div class="d-flex align-items-center mr-3">
@@ -14,8 +14,19 @@
     </header>
     <main class="mt-5 pt-5 container">
         <section class="custom-container p-5 rounded-lg shadow mb-5 text-center">
-            <h2 class="font-bowlby text-custom-header mb-4">A pioneer in smart indoor farming technology</h2>
+            <h2 class="font-bowlby text-custom-header mb-4">A Pioneer in Smart Indoor Farming Technology</h2>
+            <p class="container-text">
+                At Katari Farms, we are revolutionizing indoor farming with cutting-edge technology. Our smart grow lamps and automation systems ensure optimal growth conditions for your plants, while our expert consultation services guide you through every step of your farming journey.
+            </p>
         </section>
+
+        <section class="custom-container p-5 rounded-lg shadow mb-5 text-center">
+            <h2 class="font-bowlby text-custom-header mb-4">A Pioneer in Smart Indoor Farming Technology</h2>
+            <p class="container-text">
+                At Katari Farms, we are revolutionizing indoor farming with cutting-edge technology. Our smart grow lamps and automation systems ensure optimal growth conditions for your plants, while our expert consultation services guide you through every step of your farming journey.
+            </p>
+        </section>
+
         <section class="custom-container p-5 rounded-lg shadow text-center mb-4">
             <h2 class="font-bowlby text-custom-header mb-4">Our Services</h2>
             <div class="row">
@@ -24,7 +35,7 @@
                         <img src="/img/growlamp.png" class="img-fluid rounded">
                         <h5 class="font-bowlby text-custom-header mb-4">Smart Lamps</h5>
                         <div class="tooltip">
-                            <p>Customizable lamp builds starting from 100W, driven by a microcontroller, allowing for remote monitoring through an online interface</p>
+                            <p>Better than Sprouts, And so much more than your Oma's Kresse!!</p>
                         </div>
                     </div>
                 </div>
@@ -51,10 +62,10 @@
         <section class="custom-container p-5 rounded-lg shadow mb-5 text-center">
             <h2 class="font-bowlby text-custom-header mb-4">About Us</h2>
             <div class="container-text">
-                <p>We specialize in creating innovative, controlled grow lamps that are fine-tuned and custom-built to meet your specific setup needs. Our mission is to revolutionize indoor farming by developing advanced automation systems for climate control and irrigation, ensuring optimal growth conditions for your plants.</p>
-                <p>Our state-of-the-art monitoring software allows you to control and observe your grow setups remotely, providing you with peace of mind and the convenience of managing your farm from anywhere.</p>
-                <p>Based in Germany, we also offer expert consultation services to help you navigate the process of finding and establishing a cannabis club. Our team assists with founding documents and licensing, ensuring a smooth and compliant setup.</p>
-                <p>Join us in the future of farming with our cutting-edge solutions designed to maximize efficiency and yield in your indoor growing environment.</p>
+                We are passionate about using regenerative technology-based farming techniques to promote sustainable agriculture. 
+                We believe that by working collaboratively and in a collective manner, we can make a positive impact on the environment and local communities. 
+                We are  not  a startup!  We are not funded by Venture Capitalist! We strive to reduce the environmental footprint of how we eat. 
+                Our team is dedicated to creating a better future through responsible and sustainable agriculture.
             </div>
         </section>
         <section class="custom-container p-5 rounded-lg shadow mb-5 text-center">
