--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,6 +7,7 @@ body {
     background-color: #1a1a1a; /* Dark background for contrast */
     margin: 0;
     padding: 0;
+    padding-top: 70px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -57,6 +58,42 @@ main {
     line-height: 1.6;
     text-align: left;
     padding: 1rem;
+}
+
+/* Hero Section */
+.hero-section {
+    padding: 150px 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    background-blend-mode: multiply;
+    background-image: url('/img/solawi-banner.jpg'); /* Add your banner image */
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    margin-top: 8vh;
+    border-radius: 15px;
+}
+
+.hero-section h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.hero-section .lead {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.hero-section .btn-custom {
+    background-color: #78b286;
+    color: #fff;
+    padding: 0.75rem 2rem;
+    font-size: 1.25rem;
+    border-radius: 30px;
+    transition: background-color 0.3s ease;
+}
+
+.hero-section .btn-custom:hover {
+    background-color: #609a5c; /* Slightly darker shade for hover effect */
 }
 
 /* Image and Tooltip Styles */
@@ -213,5 +250,17 @@ footer p {
     .btn-custom {
         font-size: 0.9rem;
         padding: 0.5rem 1rem;
+    }
+
+    .hero-section {
+        padding: 100px 0;
+    }
+
+    .hero-section h1 {
+        font-size: 2rem;
+    }
+
+    .hero-section .lead {
+        font-size: 1.25rem;
     }
 }
