--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/header') %>
 
-<body class="bg-cover bg-fixed bg-center" style="background-image: url('/img/solawi-banner.jpg');">
+<body class="bg-cover bg-fixed bg-center" style="background-color: #f3eee9;">
     <main class="mt-5 pt-5 container">
         <!-- Hero Section -->
-        <section class="hero-section text-center text-white">
+        <section class="hero-section text-center text-white" style="background-color: black;">
             <div class="overlay">
                 <h1 class="font-bowlby mb-4">Willkommen bei Solawi</h1>
                 <p class="lead">Gemeinsam für nachhaltige Landwirtschaft und frische, lokale Produkte.</p>
