--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
 <body class="bg-cover bg-fixed bg-center">
-    <main class="container">
+    <main class="container mt-5 pt-5"> <!-- Add mt-5 pt-5 here -->
         <section class="custom-container p-5 rounded-lg shadow mb-5 text-center">
             <h2 class="font-bowlby text-custom-header mb-4">Login</h2>
             <form id="loginForm">
@@ -20,33 +20,3 @@
     </main>
 
 <%- include('partials/footer') %>
-
-<script>
-    document.getElementById('loginForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
-
-        // Clear previous messages
-        document.getElementById('loginMessage').textContent = '';
-
-        // Send login request
-        const response = await fetch('/api/auth/login', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({ username, password }),
-        });
-
-        const data = await response.json();
-
-        if (response.ok) {
-            document.getElementById('loginMessage').textContent = 'Login successful!';
-            window.location.href = '/'; // Redirect to home page
-        } else {
-            document.getElementById('loginMessage').textContent = data.message || 'Error logging in. Please try again.';
-        }
-    });
-</script>
